rustdocs/errors/rust-bitcoin-fuzz-fuzz_targets-bitcoin-deserialize_psbt.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin_fuzz`
 --> ../rust-bitcoin/fuzz/fuzz_targets/bitcoin/deserialize_psbt.rs:1:5
  |
1 | use bitcoin_fuzz::fuzz_utils::consume_random_bytes;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `bitcoin_fuzz`
  |
help: you might be missing a crate named `bitcoin_fuzz`, add it to your project and import it in your code
  |
1 + extern crate bitcoin_fuzz;
  |

error[E0432]: unresolved import `honggfuzz`
 --> ../rust-bitcoin/fuzz/fuzz_targets/bitcoin/deserialize_psbt.rs:2:5
  |
2 | use honggfuzz::fuzz;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `honggfuzz`
  |
help: you might be missing a crate named `honggfuzz`, add it to your project and import it in your code
  |
1 + extern crate honggfuzz;
  |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
